tests/fixtures/invalid/bytes_sub_float.py
# Cannot subtract Bytes and Float
x: float = b"hello" - 1.0
